# yield-controller

./: .env  .eslintignore  .eslintrc.yml  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
.github/workflows/: build.yml
programs/BuyAndBurnFixedPrice/src/: lib.rs
programs/BuyAndBurnFixedPrice/src/utils/: token.rs
programs/BuyBurnFixed/src/: lib.rs
programs/BuyBurnFixed/src/utils/: mod.rs  state.rs
programs/buy-and-burn/: Cargo.toml
programs/buy-and-burn/src/: lib.rs
programs/buy-and-burn/src/utils/: errors.rs  mod.rs  state.rs  switchboard.rs  token.rs
programs/buy-burn-fixed/: Cargo.toml
programs/buy-burn-fixed/src/: lib.rs
programs/buy-burn-fixed/src/utils/: errors.rs  state.rs  token.rs
programs/buy-burn-switchboard/: Cargo.toml
programs/buy-burn-switchboard/src/: lib.rs
programs/buy-burn-switchboard/src/utils/: seeds.rs  switchboard.rs
programs/fund-sender/: Cargo.toml
programs/fund-sender/src/: lib.rs
programs/fund-sender/src/external_programs/: mod.rs  mpl_bubblegum.rs  spl_account_compression.rs
programs/fund-sender/src/utils/: bubblegum.rs  errors.rs  mod.rs  seeds.rs  spend.rs  state.rs
programs/treasury-controller/: Cargo.toml
programs/treasury-controller/src/: lib.rs
programs/treasury-controller/src/utils/: errors.rs  state.rs  token.rs
programs/yield-controller/: Cargo.toml
programs/yield-controller/src/: lib.rs
programs/yield-controller/src/utils/: errors.rs  state.rs  token.rs
programs/yield-router/: Cargo.toml
programs/yield-router/src/: lib.rs
programs/yield-router/src/utils/: errors.rs  mod.rs  seeds.rs  spend.rs  state.rs
scripts/: manager.ts  prompt.ts  util.ts
scripts/submenu/: allocateYield.ts  routeToRecipient.ts  storeCertificates.ts  updateDestinationAddress.ts  updateProportions.ts
tests/: yield-controller.ts
