[package]
name = "buy-burn-switchboard"
version = "0.1.0"
description = "A program that buys and burns tokens from a holding account at a price set by an oracle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "buy_burn_switchboard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
switchboard-solana = ">=0.29.109"
